Ingress/name-host/name-host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-ingress
spec:
  rules:
  - host: "k8sdemo.prasunguchhait.com"
    http:
      paths:
      - path: /svc1
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 8080
      - path: /svc2
        pathType: Prefix
        backend:
          service:
            name: web2
            port:
              number: 8080
  - host: "foo.com"
    http:
      paths:
      - path: /demopath
        pathType: Prefix
        backend:
          service:
            name: web2
            port:
              number: 8080
